@@ -1,3 +1,9 @@
+2001-12-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02757]
+	* main.c (execdict): w = conv_from_system(word)
+	* main.c (dictword): call execdict() only
+
 2001-12-27  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* url.c (openSSLHandle): accept_this_file is out of 
@@ -1697,4 +1703,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.187 2001/12/27 02:32:08 ukai Exp $
+$Id: ChangeLog,v 1.188 2001/12/27 17:23:06 ukai Exp $
